--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,5 +19,6 @@
         {% include google_analytics.html %}
       </div>
   {% include footer.html %}
+  {% include modal.html %}
   </body>
 </html>
