--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,11 +13,12 @@ $color-border: #777777 !default;
   transition: $feature $time;
 }
 
-body, html, {
+body, html {
   height: 100%;
-
-
 }
+
+
+
 #skrollr-body {
   min-height: 100%;
   &:after {
@@ -76,10 +77,12 @@ body {
   header.navbar {
     background-color: transparent;
     border-color: rgba(255, 255, 255, 0);
+
     a {
       text-transform: uppercase;
       font-weight: 700;
       font-size: 0.9em;
+      outline: 0;
 
       &.skrollable-between {
         &:hover {
@@ -370,11 +373,20 @@ body {
   height: 100%;
 
   // Thanks At&&Code: http://codepen.io/artandcode/pen/HoxFp
-  background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(130,37,47,.7) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top, rgba(130,37,47,.4) 0%, rgba(242,153,75,.7) 100%), -moz-linear-gradient(-45deg, #670d10 0%, #092756 100%);
-  background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.7) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top, rgba(39,28,49,1) 0%,rgba(209,163,167,.9) 100%), -webkit-linear-gradient(-45deg, #670d10 0%,#092756 100%);
-  background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.7) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top, rgba(39,28,49,1) 0%,rgba(209,163,167,.9)) 100%), -o-linear-gradient(-45deg, #670d10 0%,#092756 100%);
-  background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.7) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top, rgba(39,28,49,1) 0%,rgba(209,163,167,.9) 100%), -ms-linear-gradient(-45deg, #670d10 0%,#092756 100%);
-  background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.7) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom, rgba(39,28,49,1) 0%,rgba(209,163,167,.9) 100%), linear-gradient(135deg, #670d10 0%,#092756 100%);
+  background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(39,28,49,.7) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top, rgba(130,37,47,.4) 0%, rgba(242,153,75,.7) 100%), -moz-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+  background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(39,28,49,.7) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top, rgba(39,28,49,1) 0%,rgba(209,163,167,.9) 100%), -webkit-linear-gradient(-45deg, #670d10 0%,#092756 100%);
+  background: -o-radial-gradient(0% 100%, ellipse cover, rgba(39,28,49,.7) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top, rgba(39,28,49,1) 0%,rgba(209,163,167,.9) 100%), -o-linear-gradient(-45deg, #670d10 0%,#092756 100%);
+  background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(39,28,49,.7) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top, rgba(39,28,49,1) 0%,rgba(209,163,167,.9) 100%), -ms-linear-gradient(-45deg, #670d10 0%,#092756 100%);
+  background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(39,28,49,.7) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom, rgba(39,28,49,1) 0%,rgba(209,163,167,.9) 100%), linear-gradient(135deg, #670d10 0%,#092756 100%);
 }
 
+.modal-open {
+  padding-right: 0 !important;
+}
+html {
+  overflow-y: scroll !important;
+}
 
+input {
+  outline: 0 !important;
+}
