--- a/_sass/bootstrap/mixins/_tab-focus.scss
+++ b/_sass/bootstrap/mixins/_tab-focus.scss
@@ -2,8 +2,8 @@
 
 @mixin tab-focus() {
   // Default
-  outline: thin dotted;
+  outline: 0 !important;
   // WebKit
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+  //outline: 0px auto -webkit-focus-ring-color;
+  //outline-offset: -2px;
 }
