--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,7 @@
 
 		<div class="navbar-header">
 			<a type="button" class="navbar-toggle collapsed"  href="#my-menu">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
+				<i class="ion-android-apps"></i>
 			</a>
 			<a class="navbar-brand" href="{% if page.url == "/" %}#top{% else %}/{% endif %}" data-0="color:rgba(255,255,255,0.7);font-size:1.5em;" data-100="color:rgba(34,34,34,1);font-size:1em;"><i class="ion-pound"></i>{{ site.title }}</a>
 		</div>
@@ -17,13 +14,15 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li>
 					<!-- Button trigger modal -->
-					<a href="#search" class="search-modal-btn" data-toggle="modal" data-target="#myModal"
+					<a href="#search" class="search-modal-btn" data-toggle="modal" data-target="#searchModal"
 					   data-0="color:rgba(255,255,255,0.7)"
 					   data-100="color:rgba(39,28,49,1)">
-						Search
+						<i class="ion-ios-search-strong"></i>&nbsp;&nbsp;Search
 					</a>
 
 				</li>
+				<li><span data-0="color:rgba(255,255,255,0.7)" data-100="color:rgba(39,28,49,1)">|</span></li>
+
                 {% assign pages = site.data.pages %}
                 {% for p in pages %}
                 <li>
