--- a/_includes/lp_blog.html
+++ b/_includes/lp_blog.html
@@ -1,6 +1,8 @@
 {% if site.posts.size > 0 %}
 <div class="list-group row">
-
+    <div class="col-xs-12">
+        <h1>blog</h1>
+    </div>
 
     {% for post in site.posts limit: 10 %}
     <article class="blog-post blog-{{ post.name}} col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
