--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,20 +1,25 @@
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-
-                <div id="search-container">
-                    <input type="text" id="search-input" placeholder="search...">
+            <div class="modal-header row">
+                <div id="search-container" class="col-xs-11">
+                    <input type="text" id="search-input" class="form-control" placeholder="search...">
                 </div>
-
-
+                <div class="col-xs-1 button-container">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">
+                    <i class="ion-ios-close"></i></span></button>
+                </div>
+                <div class="col-xs-12 hr-mimic"></div>
+                <div class="col-xs-12 clear-search text-right">
+                    <a class="small disabled">clear search</a>
+                </div>
             </div>
+
             <div class="modal-body">
-                <ul id="results-container"></ul>
+                <ul id="results-container" class="row results-row"></ul>
                 <script src="{{ site.baseurl }}/bower_components/simple-jekyll-search/dest/jekyll-search.js"
-                        type="text/javascript"></script>
+                            type="text/javascript"></script>
             </div>
         </div>
     </div>
