--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -63,12 +63,15 @@ body {
     header.navbar {
 
       a.skrollable-between,
-      a.skrollable-after  {
+      a.skrollable-after {
         color: $Black !important;
 
         &:hover {
           color: $PrimaryColor !important;
         }
+      }
+      span {
+        color: $Black !important;
       }
     }
   }
@@ -77,6 +80,13 @@ body {
   header.navbar {
     background-color: transparent;
     border-color: rgba(255, 255, 255, 0);
+
+    span {
+      line-height:20px;
+      position: relative;
+      display: block;
+      padding: 15px 15px;
+    }
 
     a {
       text-transform: uppercase;
@@ -389,4 +399,117 @@ html {
 
 input {
   outline: 0 !important;
+}
+
+.hr-mimic {
+  width:100%;
+  height:1px;
+  background: rgb(222,173,175);
+  background: -moz-linear-gradient(left,  rgba(222,173,175,1) 0%, rgba(39,31,55,1) 100%);
+  background: -webkit-linear-gradient(left,  rgba(222,173,175,1) 0%,rgba(39,31,55,1) 100%);
+  background: linear-gradient(to right,  rgba(222,173,175,1) 0%,rgba(39,31,55,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deadaf', endColorstr='#271f37',GradientType=1 );
+}
+
+// SEARCH MODAL
+
+#searchModal {
+  .modal-content {
+
+    .modal-header {
+
+      #search-container {
+        padding:0;
+        padding-top:20px;
+
+        input {
+          border-width:0;
+          font-size:24px;
+          font-weight:300;
+          text-transform: uppercase;
+          -webkit-box-shadow: none;
+          -moz-box-shadow: none;
+          box-shadow: none;
+        }
+      }
+      .button-container {
+        padding-right:0;
+      }
+      .clear-search {
+        padding-right:0;
+        padding-left:0;
+
+        a {
+          padding-right:0;
+          text-transform: uppercase;
+          background: rgb(222,173,175);
+          background: -moz-linear-gradient(top,  rgba(222,173,175,1) 0%, rgba(39,31,55,1) 100%);
+          background: -webkit-linear-gradient(top,  rgba(222,173,175,1) 0%,rgba(39,31,55,1) 100%);
+          background: linear-gradient(to bottom,  rgba(222,173,175,1) 0%,rgba(39,31,55,1) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deadaf', endColorstr='#271f37',GradientType=0 );
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          cursor: pointer;
+          display: inline-block;
+          padding-top:6px;
+          font-weight:400;
+
+          &.disabled {
+            opacity:0.5;
+            cursor: not-allowed;
+          }
+
+          &:hover {
+            text-decoration: none;
+          }
+
+        }
+      }
+    }
+
+    .modal-body {
+      padding:15px 0 0 0;
+      .results-row {
+        padding-left:0;
+        margin-left: -6px;
+        margin-right: -6px;
+
+        li {
+          padding-left:6px;
+          padding-right:6px;
+        }
+
+        .search-result {
+          padding: $modal-title-padding;
+          @include clearfix;
+          @include box-shadow(0 3px 6px rgba(0,0,0,.3));
+          background-color: $modal-content-bg;
+          border: 1px solid rgba(39,28,49,0.8);
+          margin-bottom:12px;
+          -webkit-transition: 0.3s ease-in-out;
+          -moz-transition: 0.3s ease-in-out;
+          -ms-transition: 0.3s ease-in-out;
+          -o-transition: 0.3s ease-in-out;
+          transition: 0.3s ease-in-out;
+
+          &:hover {
+            -webkit-transform: scale(1.05);
+            -moz-transform:    scale(1.05);
+            -ms-transform:     scale(1.05);
+            -o-transform:      scale(1.05);
+            transform:         scale(1.05);
+          }
+
+          a {
+            display: block;
+          }
+        }
+      }
+      .no-results {
+        color: $White;
+        font-weight:100;
+      }
+    }
+
+  }
 }
