--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,5 +34,8 @@ JS
     <script src="/js/okshadow.min.js"></script>
     <script src="/js/kerning.min.js"></script>
 
+<script src="https://use.typekit.net/wjr2osy.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
   <!-- CUSTOM -->
     <script src="/js/custom.js"></script>
