new home page & stuff

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,12 @@
-<div class="hero text-center" data-0="background:rgba(39,28,49,0.4)" data-600="background:rgba(35,31,55,1)">
+<div class="hero" data-0="background:rgba(39,28,49,0.0)" data-600="background:rgba(16,16,24,1)">
 	<div class="container" data-0="opacity:1;top:0;" data-500="opacity:0;top:-400px;">
 		<div class="logo" data-bottom-top="transform:translate3d(0px, 0%, 0px)"
-             data-top-bottom="transform:translate3d(0px, -100%, 0px)"></div>
+             data-top-bottom="transform:translate3d(0px, -100%, 0px)">
+			<div id="container">
+				<div id="message">
+					<a id="animate" href="#">&nbsp;&nbsp;</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
