--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
-<header class="navbar navbar-default navbar-fixed-top fixed" data-0="background:rgba(255,255,255,0)"
-		data-100="background:rgba(255,255,255,1)">
+<header class="navbar navbar-default navbar-fixed-top fixed" data-0="background:rgba(47,50,65,0);border-bottom-color:rgba(26,27,35,0);"
+		data-100="background:rgba(47,50,65,1);border-bottom-color:rgba(26,27,35,1);">
 	<div class="container-fluid">
 
 		<div class="navbar-header">
 			<a type="button" class="navbar-toggle collapsed"  href="#my-menu">
 				<i class="ion-android-apps"></i>
 			</a>
-			<a class="navbar-brand" href="{% if page.url == "/" %}#top{% else %}/{% endif %}" data-0="color:rgba(159,234,249,0.6);font-size:1.5em;" data-100="color:rgba(34,34,34,1);font-size:1em;"><i class="ion-pound"></i>{{ site.title }}</a>
+			<a class="navbar-brand" href="{% if page.url == "/" %}#top{% else %}/{% endif %}" data-0="color:rgba(159,234,249,0.6);font-size:1.5em;" data-100="color:rgba(159, 234, 249, 1);font-size:1.1em;"><i class="ion-pound"></i>{{ site.title }}</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -15,22 +15,22 @@
 				<li>
 					<!-- Button trigger modal -->
 					<a href="#search" class="search-modal-btn" data-toggle="modal" data-target="#searchModal"
-					   data-0="color:rgba(255,255,255,0)"
-					   data-100="color:rgba(39,28,49,1)">
+					   data-0="color:rgba(159, 234, 249, 0)"
+					   data-100="color:rgba(159, 234, 249, 1)">
 						<i class="ion-ios-search-strong"></i>&nbsp;&nbsp;Search
 					</a>
 
 				</li>
-				<li><span data-0="color:rgba(255,255,255,0)" data-100="color:rgba(39,28,49,1)">|</span></li>
+				<li><span data-0="color:rgba(159, 234, 249, 0)" data-100="color:rgba(159, 234, 249, 1)">|</span></li>
 
                 {% assign pages = site.data.pages %}
                 {% for p in pages %}
                 <li>
                     {% if page.url != "/" %}
-                    <a href="{{ p.prefix }}{{ p.name }}" data-0="color:rgba(255,255,255,0.7)"
-					   data-100="color:rgba(39,28,49,1)">{{ p.name }}</a>
+                    <a href="{{ p.prefix }}{{ p.name }}" data-0="color:rgba(159, 234, 249, 0)"
+					   data-100="rgba(159, 234, 249, 1)">{{ p.name }}</a>
                     {% else %}
-                    <a href="#{{ p.name }}" data-0="color:rgba(255,255,255,0)" data-100="color:rgba(39,28,49,1)">{{
+                    <a href="#{{ p.name }}" data-0="color:rgba(159, 234, 249, 0)" data-100="color:rgba(159, 234, 249, 1)">{{
 						p.name }}</a>
                     {% endif %}
                 </li>
