--- a/_includes/lp_contact.html
+++ b/_includes/lp_contact.html
@@ -1,4 +1,13 @@
 <div class="col-xs-12">
+
+        <form action="https://formspree.io/rich@sollenne.com"
+              method="POST">
+                <input type="text" name="name">
+                <input type="email" name="_replyto">
+                <input type="submit" value="Send">
+        </form>
+
+
         <a href="mailto:{{ site.email }}">{{ site.email }}</a>
         {% if site.github_username %}
         {% include icon-github.html username=site.github_username %}
