ui and services... some logos

--- a/_includes/lp_blog.html
+++ b/_includes/lp_blog.html
@@ -1,10 +1,9 @@
 {% if site.posts.size > 0 %}
 <div class="list-group row">
     <div class="col-xs-12">
-        <a class="title" href="/blog/"><h2>Blog Posts</h2></a>
+        <a class="title text-center" href="/blog/"><h2 class="text-center">Just call me Jack Handy.</h2></a>
     </div>
-    <div class="col-xs-12">
-        <hr></div>
+
 
     {% for post in site.posts limit: 10 %}
     <article class="blog-post blog-{{ post.name}} col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
