--- a/_includes/lp_portfolio.html
+++ b/_includes/lp_portfolio.html
@@ -1,3 +1,5 @@
-<div class="col-xs-12">
-    <p>portfolio include</p>
+<div class="row">
+    <div class="col-xs-12">
+        <h2 class="text-center">If you really must see my work...</h2>
+    </div>
 </div>
