--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Cutive+Mono|Nova+Mono);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|Nova+Mono);
 
 //Vars
 $PrimaryColor: #9FEAF9 !default;
@@ -32,7 +32,6 @@ body, html {
 
 h1,h2,h3,h4,h5,h6 {
   font-weight:700;
-  text-transform: uppercase;
 }
 
 ::selection {
@@ -44,7 +43,7 @@ h1,h2,h3,h4,h5,h6 {
 
 
 body {
-  font-weight:300;
+  //font-weight:300;
   -moz-osx-font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   //background: url("/img/138H.jpg") center center no-repeat fixed;
@@ -55,6 +54,8 @@ body {
   width: 100%;
   left: 0;
   top: 0;
+  font: 16px/1.4 Roboto,-apple-system,BlinkMacSystemFont,"Helvetica Neue","Segoe UI","Oxygen","Ubuntu","Cantarell","Open Sans",sans-serif;
+  font-family: Roboto,-apple-system,BlinkMacSystemFont,"Helvetica Neue","Segoe UI","Oxygen","Ubuntu","Cantarell","Open Sans",sans-serif;
 
 
 
@@ -286,15 +287,31 @@ body {
     position: relative;
     z-index:0;
 
+    //.container {
+    //  width:100%;
+    //}
     a.title {
       &:hover {
         text-decoration:none;
       }
-      h2 {
-        font-family: 'Nova Mono', Courier, monospace;
-      }
+
     }
 
+    h2 {
+      font-weight:300;
+      color: #20515b !important;
+      font-size: 38px;
+      margin-bottom:15px;
+      margin-top:60px;
+      //#20515b
+    }
+    p.lead {
+      color: #3a585f;
+      text-align:center;
+      font-size:20px;
+      margin-bottom:60px;
+      line-height:30px;
+    }
 
     &#about {
       background: $PrimaryColor;
@@ -308,9 +325,6 @@ body {
       .container {
         width:100%;
       }
-      h2 {
-        color: #7c9398 !important;
-      }
     }
 
     &#services {
@@ -319,8 +333,10 @@ body {
     }
 
     &#portfolio {
-      background: $Black;
-      color: $White;
+      background: #f6f8f8;
+      color: $Black;
+      border-top: 1px solid #e0e5e6;
+      border-bottom: 1px solid #e0e5e6;
     }
 
     &#contact {
@@ -328,22 +344,14 @@ body {
       color: $Black;
     }
 
-    h1.blog-h {
-      //text-shadow: 0 2px 3px rgba(108, 77, 14, 0.8);
-      font-size: 4.5em;
-      //text-transform: capitalize !important;
-      //font-family:'geared_slabbold', "Impact", Charcoal, Arial Black, Gadget, Sans serif;
-      font-weight:900;
-      margin-top: 0;
-      margin-bottom: 6px;
-      -letter-kern: -2px 0 1px 10px 1px -1px 3px 2px;
-    }
+
   }
 
   footer {
     padding:50px 0 20px;
-    background: $White;
+    background: #f6f8f8;
     color: $Black;
+    border-top: 1px solid #e0e5e6;
   }
 
   ul.social {
@@ -407,7 +415,7 @@ body {
   font-weight:lighter;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700);
+
 
 // Floating card size
 $fc-width: 270px;
@@ -481,13 +489,14 @@ body {
       font-weight: 700;
       //text-transform: uppercase;
       letter-spacing: 0.05em;
-      font-family: 'Nova Mono', Courier, monospace;
+      font-weight:300;
+      //font-family: 'Nova Mono', Courier, monospace;
     }
 
     .caption {
       color: $color-gold;
-      font-family: 'Nova Mono', Courier, monospace;
-      font-size: 1.6rem;
+      //font-family: 'Nova Mono', Courier, monospace;
+      font-size: 1.35rem;
       //font-weight: 700;
       //text-transform: uppercase;
       letter-spacing: 0.2em;
