--- a/_includes/lp_services.html
+++ b/_includes/lp_services.html
@@ -1,13 +1,21 @@
 <div class="row">
-    <div class="col-xs-12">
-        <h2 class="text-center">So, What would you say you do here?</h2>
+    <div class="col-xs-12 text-center">
+        <h2 class="text-center">What would you say you do here?</h2>
         <p class="lead">
-            I'm a Front-End Developer with some quality back-end experience. I guess these days you would say I'm a 'JavaScript Developer' or 'Angular Developer'. I have a lot of experience with Internationalization and Localization. I am well-versed Accessibility and SEO (and how these work with one-another). I have worked as an admin, lead, manager and various other roles. I like dealing with server configurations, builds, version control, proxies, routing, and more.
+            I'm a Front-End Developer with some quality back-end experience. You could also call me a JavaScript Developer or <strong>Angular Developer</strong>. I have experience with Internationalization and Localization. I am well-versed in Accessibility and SEO as well. I have worked as an admin, lead dev, manager and various other roles.
         </p>
-        <h2 class="text-center">Are we right for eachother?</h2>
+        <a href="#" class="btn btn-primary btn-lg"><i class="ion-ios-flask"></i>&nbsp;&nbsp;My workflow</a>
+        <hr>
+        <h2 class="text-center">So, are we right for eachother?</h2>
         <p class="lead">
-            If you're a recruiter, chances are we are not a fit right now. I'm employed full-time and don't really need to look around currently. No, I don't have any friends or colleagues that are looking for your position. If your looking for a freelance developer for your project, contact me and I'll see if I can take it on. I'll offer whatever advice I can either way.
+            If you're a recruiter, I'm not looking to make a change right now. No, I don't have any friends or colleagues that are looking for your position. If you need a freelance developer for your project, contact me and I'll see if I can take it on. I'll offer whatever advice I can either way.
         </p>
+        <div class="availability">
+            <span class="recruiters">Recruiters: <i class="ion-close"></i></span>
+            <span class="recruiters">Agencies: <i class="ion-close"></i></span>
+            <span class="freelance">Freelance Projects: <i class="ion-checkmark"></i></span>
+        </div>
+        <hr>
         <h2 class="text-center">Cool icons for things I use.</h2>
         <p class="lead">In in orci velit. Praesent porta justo vel scelerisque pulvinar. Sed lacinia tempus metus eu suscipit. Integer accumsan neque vel ligula tempus, a placerat neque placerat. Aenean ac risus tortor. Suspendisse sed nulla at lacus consectetur volutpat nec nec orci. Phasellus eget laoreet turpis, id hendrerit libero.</p>
     </div>
