--- a/_sass/bootstrap/mixins/_buttons.scss
+++ b/_sass/bootstrap/mixins/_buttons.scss
@@ -15,9 +15,9 @@
         border-color: darken($border, 25%);
   }
   &:hover {
-    color: $color;
-    background-color: darken($background, 10%);
-        border-color: darken($border, 12%);
+    color: #fff;
+    background-color: $color;
+        border-color: $border;
   }
   &:active,
   &.active,
@@ -61,5 +61,5 @@
   padding: $padding-vertical $padding-horizontal;
   font-size: $font-size;
   line-height: $line-height;
-  border-radius: $border-radius;
+  border-radius: 0.25em;
 }
