--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -283,7 +283,7 @@ body {
 
   section {
     min-height:500px;
-    padding:33px 0;
+    padding: 0;
     position: relative;
     z-index:0;
 
@@ -302,7 +302,7 @@ body {
       color: #20515b !important;
       font-size: 38px;
       margin-bottom:15px;
-      margin-top:60px;
+      margin-top:50px;
       //#20515b
     }
     p.lead {
@@ -311,6 +311,15 @@ body {
       font-size:20px;
       margin-bottom:60px;
       line-height:30px;
+    }
+
+    .btn.btn-primary.btn-lg {
+      margin-top:-40px;
+      margin-bottom:30px;
+    }
+
+    .container {
+      max-width:800px;
     }
 
     &#about {
@@ -324,12 +333,44 @@ body {
       border-bottom: 1px solid #e0e5e6;
       .container {
         width:100%;
+        max-width: 100%;
+
+        h2 {
+          margin-bottom:50px;
+        }
       }
     }
 
     &#services {
       background: $White;
       color: $Black;
+
+      .availability {
+        background: #f6f8f8;
+        border: 1px solid #e0e5e6;
+        padding:33px;
+        margin-top:-40px;
+        margin-bottom: 60px;
+        border-radius: 0.25em;
+
+        span {
+          color: #7c9398;
+          padding: 0.6em 0.8em;
+
+          &.recruiters {
+            border-right: 1px solid #d1d9db;
+
+            i {
+              color: $brand-danger;
+            }
+          }
+          &.freelance {
+            i {
+              color: $brand-success;
+            }
+          }
+        }
+      }
     }
 
     &#portfolio {
@@ -487,18 +528,13 @@ body {
       color: white;
       font-size: 2.4rem;
       font-weight: 700;
-      //text-transform: uppercase;
       letter-spacing: 0.05em;
       font-weight:300;
-      //font-family: 'Nova Mono', Courier, monospace;
     }
 
     .caption {
       color: $color-gold;
-      //font-family: 'Nova Mono', Courier, monospace;
       font-size: 1.35rem;
-      //font-weight: 700;
-      //text-transform: uppercase;
       letter-spacing: 0.2em;
     }
   }
