--- a/_sass/bootstrap/_buttons.scss
+++ b/_sass/bootstrap/_buttons.scss
@@ -69,7 +69,7 @@ a.btn {
   @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
 }
 .btn-primary {
-  @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+  @include button-variant($btn-primary-bg, transparent, $btn-primary-bg);
 }
 // Success appears as green
 .btn-success {
@@ -135,6 +135,8 @@ a.btn {
 .btn-lg {
   // line-height: ensure even-numbered height of button next to large input
   @include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $btn-border-radius-large);
+  padding: .65em 1.25em;
+  font-size:16px;
 }
 .btn-sm {
   // line-height: ensure proper height of button next to small input
