--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -371,6 +371,21 @@ body {
           }
         }
       }
+      .technologies {
+        color: #7c9398;
+        text-transform: capitalize;
+        margin-bottom:50px;
+        .col-xs-2 {
+          margin-bottom: 30px;
+          height:100px;
+          text-align:center;
+          img {
+            display:block;
+            margin:0 auto;
+            width:100%;
+          }
+        }
+      }
     }
 
     &#portfolio {
