--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -376,9 +376,12 @@ body {
         text-transform: capitalize;
         margin-bottom:50px;
         .col-xs-2 {
-          margin-bottom: 30px;
+          margin-bottom: 54px;
           height:100px;
           text-align:center;
+          > div {
+            height: 100px;
+          }
           img {
             display:block;
             margin:0 auto;
