Push notes for 08/11/2016

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -843,3 +843,11 @@ input {
     margin-bottom: 60px;
   }
 }
+
+
+// notes container
+.notes-container {
+  h1,h2,h3,h4,h5,h6 {
+    font-weight: 300;
+  }
+}
