start notes sprint 50

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -12,9 +12,7 @@ layout: default
             <!--<div class="post-header">-->
                 <!--<h1 class="post-title">{{ post.title }}...</h1>-->
                 <!--<h1 class="post-title">{{ page.subtitle }}</h1>-->
-            <h1>NOTES - <small class="lead"><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b
-                %d, %Y' }}</time></small></h1>
-            <hr>
+            <h1>Notes - {{ page.name }}</h1>
             <!--</div>-->
 
             <div id="post-content">
