fix js dependencies

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -5,13 +5,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
 <script src="/js/skrollr-menu.min.js"></script>
-<script src="/js/slabtext.js"></script>
 <script src="/js/jquery.mmenu.all.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dynamics.js/0.0.7/dynamics.min.js"></script>
 <script src="/js/jquery.duotone.min.js"></script>
 <script src="/js/okshadow.min.js"></script>
 <script src="/js/kerning.min.js"></script>
-<script src="/bower_components/clipboard/dist/clipboard.min.js"></script>
+<script src="/js/clipboard.min.js"></script>
 
 {% include google_analytics.html %}
 
